fix: correct mobile menu button alignment vol.12

--- a/css/style.css
+++ b/css/style.css
@@ -3269,11 +3269,12 @@ template {
   font-size: calc( 18px + 0 * ( (100vw - 375px) / 1545 ));
   line-height: 18px;
   font-weight: 400;
-  font-family: "Gilroy", sans-serif;
-  position: relative;
+  font-family: "Inter", sans-serif;
+  display: flex;
+  align-items: center;
   width: 100%;
   margin-bottom: 17px;
-  padding: 19px 0 19px 30px;
+  padding: 19px 0 19px 7px;
   border-bottom: 1px solid #525252;
   color: #a4a4a4; }
   @media screen and (max-width: 375px) {
@@ -3288,9 +3289,6 @@ template {
     display: block; }
 
 .mobile-catalog__link-icon {
-  position: absolute;
-  top: 17px;
-  left: 7px;
   display: block;
   margin-right: 3px;
   fill: transparent;
